Bug 236076 - amarokcollectionscanner, "--rpath" does not work
Summary: amarokcollectionscanner, "--rpath" does not work
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collections/Local (other bugs)
Version First Reported In: 2.3.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-02 21:25 UTC by Kenn
Modified: 2010-08-18 15:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kenn 2010-05-02 21:25:14 UTC
Version:           2.3.0 (using KDE 4.4.2)
OS:                Linux
Installed from:    openSUSE RPMs

Running amarokcollectionscanner from command line does not work with "--rpath".

eg:
amarokcollectionscanner -b -r Music > amarokcollectionscanner_batchfullscan.xml
Works.

amarokcollectionscanner -b -r --rpath="/mnt" Music > amarokcollectionscanner_batchfullscan.xml
Does not work.

The help information is printed as if "--rpath" is not  valid option.
Comment 1 Jeff Mitchell 2010-08-18 13:49:44 UTC
commit 14f5b976dc11ba7bea2900fcc5d6670330c95d85
Author: Jeff Mitchell <mitchell@kde.org>
Date:   Wed Aug 18 07:50:08 2010 -0400

    Help text for collection scanner rpath value was wrong. It's
    --rpath<space>"dir" not --rpath="dir"
    
    BUG: 236076

diff --git a/ChangeLog b/ChangeLog
index eb2e25e..9606290 100644
--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@ VERSION 2.3.2
 
   BUGFIXES:
     * Fix context menu actions acting on wrong indices in the playlist browser.
+    * Fix incorrect text about "rpath" argument to collection scanner.
+      (BR 236076)
 
 
 VERSION 2.3.2-Beta 1
diff --git a/utilities/collectionscanner/CollectionScanner.cpp b/utilities/collectionscanner/CollectionScanner.cpp
index 020e684..f0cef67 100644
--- a/utilities/collectionscanner/CollectionScanner.cpp
+++ b/utilities/collectionscanner/CollectionScanner.cpp
@@ -1037,7 +1037,7 @@ CollectionScanner::displayHelp()
     s_textStream << qPrintable( tr( "-s, --restart         : After a crash, restart the scanner in its last position" ) ) << endl;
     s_textStream << qPrintable( tr( "-b, --batch           : Run in batch mode" ) ) << endl;
     s_textStream << qPrintable( tr( "--idlepriority        : Run at idle priority" ) ) << endl;
-    s_textStream << qPrintable( tr( "--rpath=\"<path>\"      : In full-scan batch mode, specifies a path to prepend to entries (default is the current directory)" ) ) << endl;
+    s_textStream << qPrintable( tr( "--rpath \"<path>\"      : In full-scan batch mode, specifies a path to prepend to entries (default is the current directory)" ) ) << endl;
     s_textStream << qPrintable( tr( "--savelocation        : Internal command used by Amarok" ) ) << endl;
     s_textStream.flush();