Help text for collection scanner rpath value was wrong. It's --rpath<space>"dir" not --rpath="dir"

BUG: 236076